fixed flexwrap

--- a/BoutiqueEnLigne/app/assets/stylesheets/application.css
+++ b/BoutiqueEnLigne/app/assets/stylesheets/application.css
@@ -556,7 +556,7 @@
   .blockquote-footer {
     display: block;
     font-size: 80%;
-    color: #868e96;
+    color: #ffffff;
   }
   
   .blockquote-footer::before {
@@ -4945,10 +4945,10 @@
             flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: #F6f0f0;
     background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
+    border-radius: 1rem;
+    padding-bottom: 0.5rem;
   }
   
   .card > hr {
@@ -10678,6 +10678,8 @@
   
   footer {
     font-size: 0.930125rem;
+    color: #655656;
+    background-color: rgb(253, 253, 253)
   }
   
   .lead {
@@ -10985,156 +10987,13 @@ html {
     color: #F6F0F0;
 }
 
-/*Footer*/
-.footer-distributed{
-    position: absolute;
-    bottom: 0;
-    background-color: #F6F0F0;
-    box-sizing: border-box;
-    width: 100%;
-    font: bold 16px sans-serif;
-    padding: 55px 50px;
-    margin-top: 80px;
-    margin-bottom: -80px;
-  }
-  
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-    display: inline-block;
-    vertical-align: top;
-  
-  }
-  
-  /* Footer left */
-  
-  .footer-distributed .footer-left{
-    width: 40%;
-  }
-  
-  /* The company logo */
-  
-  .footer-distributed h3{
-    color:  #F6F0F0;
-    font: normal 36px, cursive;
-    margin: 0;
-  }
-  
-  /* Footer links */
-  
-  .footer-distributed .footer-links{
-    color:  #C4C4C4;
-    margin: 20px 0 12px;
-    padding: 0;
-  }
-  
-  .footer-distributed .footer-links a{
-    display:inline-block;
-    line-height: 1.8;
-    text-decoration: none;
-    color:  inherit;
-  }
-  
-  .footer-distributed .footer-company-name{
-    color:  #C4C4C4;
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
-  }
-  
-  /* Footer Center */
-  
-  .footer-distributed .footer-center{
-    width: 35%;
-  }
-  
-  .footer-distributed .footer-center i{
-    background-color:  #F6F0F0;
-    color: #C4C4C4;
-    font-size: 25px;
-    width: 38px;
-    height: 38px;px
-    border-radius: 50%;
-    text-align: center;
-    line-height: 42px;
-    margin: 10px 15px;
-    vertical-align: middle;
-  }
-  
-  .footer-distributed .footer-center i.fa-envelope{
-    font-size: 17px;
-    line-height: 38px;
-  }
-  
-  .footer-distributed .footer-center p{
-    display: inline-block;
-    color: #C4C4C4;
-    vertical-align: middle;
-    margin:0;
-  }
-  
-  .footer-distributed .footer-center p span{
-    display:block;
-    font-weight: normal;
-    font-size:14px;
-    line-height:2;
-  }
-  
-  .footer-distributed .footer-center p a{
-    color:  #C4C4C4;
-    text-decoration: none;;
-  }
-  
-  
-  /* Footer Right */
-  
-  .footer-distributed .footer-right{
-    width: 20%;
-  }
-  
-  .footer-distributed .footer-company-about{
-    line-height: 20px;
-    color:  #C4C4C4;
-    font-size: 13px;
-    font-weight: normal;
-    margin: 0;
-  }
-  
-  .footer-distributed .footer-company-about span{
-    display: block;
-    color:  #C4C4C4;
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .footer-distributed .footer-icons{
-    margin-top: 25px;
-  }
-  
-  .footer-distributed .footer-icons a{
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background-color:  #F6F0F0;
-    border-radius: 2px;
-  
-    font-size: 20px;
-    color: #C4C4C4;
-    text-align: center;
-    line-height: 35px;
-  
-    margin-right: 3px;
-    margin-bottom: 5px;
-  }
-
-.nav-button.a{
-    color: #F6F0F0 !important;
-    border-color: #F6F0F0 !important;
-    border-radius: 9999em !important;
+.cat-card{
+    color: #000;
+    border-radius: 100px;
 }
 
-footer{
-    vertical-align: bottom;
-}
+.my-image-container {
+    height: 10rem;
+    background: url("https://placekitten.com/500/325") top left no-repeat;
+    border-radius: 1rem 1rem 0rem 0rem;
+  }
